--- a/templates/parent.html
+++ b/templates/parent.html
@@ -34,10 +34,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="contact">Contact</a>
+                <a class="nav-link" aria-current="page" href="contact">Contact</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="addBook">Add a Book</a>
+              </li>              
+              <li class="nav-item">
+                <a class="nav-link" href="records">Show all Records</a>
               </li>
             </ul>
 
