adding update page and functionality

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,8 +5,8 @@
 {% block main %}
 
     <div class="container">
-    <H1>BiblioTech Solutions</H1>
-    <p>As the founder of BiblioTech Solutions, I am dedicated to revolutionizing the way libraries manage their records and resources. With a deep passion for technology and a commitment to enhancing the library experience, I have developed an innovative application suite designed to streamline library operations. Our comprehensive solution offers seamless management of library records, ensuring efficiency and accuracy. At [Your Company Name], we strive to empower libraries to focus on what they do best: fostering a love for reading and learning within their communities.</p>
+    <H1 class="my-5 text-center">BiblioTech Solutions</H1>
+    <p>As the founder of BiblioTech Solutions, I am dedicated to revolutionizing the way libraries manage their records and resources. With a deep passion for technology and a commitment to enhancing the library experience, I have developed an innovative application suite designed to streamline library operations. Our comprehensive solution offers seamless management of library records, ensuring efficiency and accuracy. At Bibliotech Solutions, we strive to empower libraries to focus on what they do best: fostering a love for reading and learning within their communities.</p>
     </div>
 
 {% endblock main %}
