--- a/templates/addBook.html
+++ b/templates/addBook.html
@@ -5,7 +5,7 @@
 {% block main %}
 <div class="container">
     <h1 class="my-5 text-center">Add a Book Record</h1>
-    <form action="add" method="POST">
+    <form class="border p-4" action="add" method="POST">
         <label for="BookNo" class="form-label">Book ID</label>
         <input type="text" name="BookNo" id="BookNo" class="form-control">
         <label for="BookName" class="form-label">Book Name</label>
