--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,9 +3,10 @@
     <title>Contact Us</title>
 {% endblock title %}
 {% block main %}
-    <div class="container"><h2>Get in touch with us.</h2>
+    <div class="container">
+        <h2 class="my-5 text-center">Get in touch with us.</h2>
     <form>
-        <div class="mb-3">
+        <div class="mb-3 border p-4">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
